--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,7 @@
 
   <target name="build-common">
     <mkdir dir="${builddir}/common"/>
-    <javac target="1.6" source="1.6" debug="on" srcdir="common/java" destdir="${builddir}/common">
+    <javac debug="on" srcdir="common/java" destdir="${builddir}/common">
       <classpath refid="classpath"/>
     </javac>
   </target>
@@ -36,14 +36,14 @@
 
   <target name="build-handler">
     <mkdir dir="${builddir}/browse-handler"/>
-    <javac target="1.6" source="1.6" debug="on" srcdir="browse-handler/java" destdir="${builddir}/browse-handler">
+    <javac debug="on" srcdir="browse-handler/java" destdir="${builddir}/browse-handler">
       <classpath refid="classpath"/>
     </javac>
   </target>
 
   <target name="build-indexing">
     <mkdir dir="${builddir}/browse-indexing"/>
-    <javac target="1.6" source="1.6" debug="on" srcdir="browse-indexing/" destdir="${builddir}/browse-indexing">
+    <javac debug="on" srcdir="browse-indexing/" destdir="${builddir}/browse-indexing">
       <classpath refid="classpath"/>
     </javac>
   </target>
