--- a/build.xml
+++ b/build.xml
@@ -2,6 +2,8 @@
 
   <property name="builddir" location="build"/>
   <property name="build.sysclasspath" value="last"/>
+  <property name="testdir" value="${builddir}/tests"/>
+  <property name="testoutputdir" value="${testdir}/output"/>
   <property name="solr.war" value="../solr/jetty/webapps/solr.war"/>
   <property name="solr.dir" value="../solr/jetty/webapps/solr/"/>
   <property name="java.compat.version" value="1.7"/>
@@ -92,8 +94,10 @@
   </target>
 
   <target name="test" depends="build">
-    <mkdir dir="${builddir}/tests"/>
-    <javac fork="true" debug="on" srcdir="tests/" destdir="${builddir}/tests"
+      <mkdir dir="${testdir}"/>
+      <mkdir dir="${testoutputdir}"/>
+      <mkdir dir="${testdir}/report"/>
+    <javac fork="true" debug="on" srcdir="tests/" destdir="${testdir}"
            classpath="tests/lib/*:${toString:classpath}:${builddir}/browse-handler">
       <compilerarg line="-encoding UTF-8" />
     </javac>
@@ -103,16 +107,28 @@
       <classpath>
         <pathelement location="tests/lib/junit-4.11.jar"/>
         <pathelement location="tests/lib/*"/>
-        <pathelement location="${builddir}/tests"/>
+        <pathelement location="${testdir}"/>
         <pathelement location="${builddir}/browse-handler"/>
         <pathelement path="${toString:classpath}"/>
       </classpath>
-      <formatter type="plain" usefile="false"/>
-      <batchtest>
+      <!-- formatter type="plain" usefile="false"/-->
+      <batchtest todir="${testoutputdir}">
         <fileset dir="tests">
-	  <include name="**/*.java"/>
+          <include name="**/*.java"/>
         </fileset>
+        <formatter type="xml" usefile="yes"/>
+        <formatter type="plain" usefile="yes"/>
+        <formatter type="brief" usefile="no"/>
       </batchtest>
     </junit>
+      
+    <junitreport todir="${testdir}/report">
+      <fileset dir="${testoutputdir}">
+        <include name="TEST-*.xml"/>
+      </fileset>
+      <report format="frames" todir="${testdir}/report"/>
+    </junitreport>
+    <echo message="JUnit reports available in ${testdir}/report"></echo>
+
   </target>
 </project>
