Adjusted Travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ jdk:
   - openjdk7
 
 before_script:
-  - wget https://github.com/vufind-org/vufind/raw/master/solr/jetty/webapps/solr.war
+  - wget https://github.com/vufind-org/vufind/archive/v2.5.zip
+  - unzip v2.5.zip
 
 script:
-  - ant test -Dsolr.war=solr.war
+  - ant test -Dvufind.dir=vufind-2.5
