Update test versions.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 sudo: false
+dist: trusty
 language: java
 jdk:
-  - openjdk7
+  - openjdk8
 
 before_script:
-  - wget https://github.com/vufind-org/vufind/archive/v3.0.2.zip
-  - unzip v3.0.2.zip
+  - wget https://github.com/vufind-org/vufind/archive/v3.1.3.zip
+  - unzip v3.1.3.zip
 
 script:
-  - ant test -Dvufind.dir=vufind-3.0.2
+  - ant test -Dvufind.dir=vufind-3.1.3
