Build process cleanup (#24)
- remove old support libs and pull from the VuFind Solr.
- set up test index using VuFind distribution Solr.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,19 @@ addons:
       - ant
       - ant-optional
 
+# set up a small VuFind and load some records
 before_script:
   - if [ ! -d downloads ]; then mkdir downloads; fi;
-  - if [ ! -f downloads/vufind-4.0.zip ]; then wget http://downloads.sourceforge.net/vufind/vufind-4.0.zip?use_mirror=osdn -O downloads/vufind-4.0.zip; fi;
-  - unzip downloads/vufind-4.0.zip
+  - if [ ! -f downloads/vufind-4.0.zip ]; then wget -nv http://downloads.sourceforge.net/vufind/vufind-4.0.zip?use_mirror=osdn -O downloads/vufind-4.0.zip; fi;
+  - unzip -q downloads/vufind-4.0.zip
+  - cd vufind-4.0
+  - export VUFIND_HOME=$(pwd)
+  - ./solr.sh start
+  - ./import-marc-auth.sh tests/data/authority/authorityauth.mrc marc_auth_ils.properties
+  - ./import-marc.sh tests/data/authoritybibs.mrc
+  - ./index-alphabetic-browse.sh
+  - ./solr.sh stop
+  - cd ..
 
 script:
   - ant test -Dvufind.dir=vufind-4.0
