--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ dist: trusty
 language: java
 jdk:
   - openjdk8
+php:
+  - 7.1
 
 # addons section is a workaround for a Travis issue with missing JUnit jars:
 addons:
@@ -15,10 +17,14 @@ addons:
 
 # set up a small VuFind and load some records
 before_script:
-  - if [ ! -d downloads ]; then mkdir downloads; fi;
-  - if [ ! -f downloads/vufind-4.0.zip ]; then wget -nv http://downloads.sourceforge.net/vufind/vufind-4.0.zip?use_mirror=osdn -O downloads/vufind-4.0.zip; fi;
-  - unzip -q downloads/vufind-4.0.zip
-  - cd vufind-4.0
+  - if [ ! -d vufind ]; then git clone https://github.com/vufind-org/vufind.git; fi;
+  - cd vufind
+  - git pull
+  - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+  - php -r "if (hash_file('SHA384', 'composer-setup.php') === '544e09ee996cdf60ece3804abc52599c22b1f40f4323403c44d44fdfdd586475ca9813a858088ffbc1f233e9b180f061') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
+  - php composer-setup.php
+  - php -r "unlink('composer-setup.php');"
+  - php composer.phar install
   - export VUFIND_HOME=$(pwd)
   - ./solr.sh start
   - ./import-marc-auth.sh tests/data/authority/authorityauth.mrc marc_auth_ils.properties
@@ -32,4 +38,4 @@ script:
 
 cache:
   directories:
-    - downloads
+    - vufind
