--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_script:
   - if [ ! -d vufind/.git ]; then git clone https://github.com/vufind-org/vufind.git; fi;
   - cd vufind
   - git pull
+  - php -v
+  - phpenv versions
   - php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
   - php -r "if (hash_file('SHA384', 'composer-setup.php') === '544e09ee996cdf60ece3804abc52599c22b1f40f4323403c44d44fdfdd586475ca9813a858088ffbc1f233e9b180f061') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
   - php composer-setup.php
