Browse handler test frame (#30)
- Apply style normalization to code
- Split some classes out into their own files
- Add test data
- Add procedure for creating a test Solr index
- Add tests

--- a/build.xml
+++ b/build.xml
@@ -4,8 +4,12 @@
   <property name="build.sysclasspath" value="last"/>
   <property name="testdir" value="${builddir}/tests"/>
   <property name="testoutputdir" value="${testdir}/output"/>
+  <property name="testdata.dir" value="tests/data"/>
+  <property name="authdata.dir" value="${testdata.dir}/auth"/>
+  <property name="bibdata.dir" value="${testdata.dir}/bib"/>
   <property name="vufind.dir" value="/usr/local/vufind"/>
-  <property name="solr.solr.home" value="${vufind.dir}/solr/vufind"/>
+  <property name="absolute.vufind.dir" location="${vufind.dir}"/>
+  <property name="solr.solr.home" value="${absolute.vufind.dir}/solr/vufind"/>
   <property name="java.compat.version" value="1.8"/>
   <property name="ant.build.javac.source" value="1.8"/>
   <property name="ant.build.javac.target" value="1.8"/>
@@ -18,13 +22,17 @@
     <fileset dir="libs">
       <include name="**/*.jar"/>
     </fileset>
-    <fileset erroronmissingdir="false" dir="${vufind.dir}/solr/vendor/contrib/analysis-extras">
+    <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vendor/contrib/analysis-extras">
       <include name="**/*.jar"/>
     </fileset>
-    <fileset erroronmissingdir="false" dir="${vufind.dir}/solr/vendor/dist">
+    <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vendor/dist">
       <include name="**/*.jar"/>
     </fileset>
-    <fileset erroronmissingdir="false" dir="${vufind.dir}/solr/vendor/server/solr-webapp/webapp/WEB-INF/lib">
+    <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vendor/server/solr-webapp/webapp/WEB-INF/lib">
+      <include name="**/*.jar"/>
+    </fileset>
+    <!-- Needed for building tests that invoke Solr -->
+    <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vendor/server/lib">
       <include name="**/*.jar"/>
     </fileset>
   </path>
@@ -37,12 +45,12 @@
   </target>
 
   <target name="setup-solr-deps">
-    <available file="${vufind.dir}/solr/jetty/webapps/solr.war" property="solr.war.present"/>
+    <available file="${absolute.vufind.dir}/solr/jetty/webapps/solr.war" property="solr.war.present"/>
     <antcall target="unpack-solr-war"/>
   </target>
 
   <target name="unpack-solr-war" if="solr.war.present">
-    <unwar src="${vufind.dir}/solr/jetty/webapps/solr.war" dest="${builddir}/deps/"/>
+    <unwar src="${absolute.vufind.dir}/solr/jetty/webapps/solr.war" dest="${builddir}/deps/"/>
   </target>
 
   <target name="build" depends="clean, setup, build-common, build-handler, build-indexing">
@@ -69,6 +77,7 @@
     <javac debug="on" srcdir="browse-handler/java" destdir="${builddir}/browse-handler">
       <classpath refid="classpath"/>
       <compilerarg value="-Xlint"/>
+      <compilerarg value="-Xlint:unchecked"/>
       <!-- sometimes useful for library or refective programming failures -->
       <!-- <compilerarg value="-Xdiags:verbose"/> -->
     </javac>
@@ -114,44 +123,96 @@
     </jar>
   </target>
 
-  <target name="test" depends="build">
-    <mkdir dir="${testdir}"/>
-    <mkdir dir="${testoutputdir}"/>
-    <mkdir dir="${testdir}/report"/>
-    <javac fork="true" debug="on" srcdir="tests/" destdir="${testdir}"
-           classpath="tests/lib/*:${toString:classpath}:${builddir}/browse-handler">
-      <compilerarg line="-encoding UTF-8" />
-    </javac>
+    <!-- =================================
+          target: setup-test-cores
 
-    <junit showoutput="yes" fork="true">
-      <sysproperty key="vufind.dir" value="${vufind.dir}" />
-      <sysproperty key="solr.solr.home" value="${solr.solr.home}" />
-      <jvmarg value="-Dfile.encoding=UTF-8" />
-      <classpath>
-        <pathelement location="tests/lib/junit-4.11.jar"/>
-        <pathelement location="tests/lib/*"/>
-        <pathelement location="${testdir}"/>
-        <pathelement location="${builddir}/browse-handler"/>
-        <pathelement path="${toString:classpath}"/>
-      </classpath>
-      <!-- formatter type="plain" usefile="false"/-->
-      <batchtest todir="${testoutputdir}">
-        <fileset dir="tests">
-          <include name="**/*.java"/>
+          Put known test data into Solr cores:
+          start Solr,
+          add authority and biblographic data,
+          generate alphabetical indexes,
+          stop Solr
+         ================================= -->
+    <!-- Currently working only for UNIX flavors -->
+    <target name="setup-test-cores"
+         description="Set up test Solr cores with some known test data">
+      <exec executable="${absolute.vufind.dir}/solr.sh">
+        <env key="VUFIND_HOME" value="${absolute.vufind.dir}"/>
+        <arg value="start"/>
+      </exec>
+      <!-- Alternately, could exec ${absolute.vufind.dir}/harvest/batch-import-marc-auth.sh -->
+      <apply executable="${absolute.vufind.dir}/import-marc-auth.sh">
+        <env key="VUFIND_HOME" value="${absolute.vufind.dir}"/>
+        <fileset dir="${authdata.dir}">
+          <include name="**/*.xml"/>
         </fileset>
-        <formatter type="xml" usefile="yes"/>
-        <formatter type="plain" usefile="yes"/>
-        <formatter type="brief" usefile="no"/>
-      </batchtest>
-    </junit>
+        <!--
+            Would like to also use authority test records under the VuFind
+            test data, but they are missing the expected id fields.
+          -->
+        <!--
+        <fileset dir="${absolute.vufind.dir}/tests/data/authority">
+          <include name="**/*.mrc"/>
+        </fileset>
+        -->
+      </apply>
+      <apply executable="${absolute.vufind.dir}/import-marc.sh">
+        <env key="VUFIND_HOME" value="${absolute.vufind.dir}"/>
+        <fileset dir="${bibdata.dir}">
+          <include name="**/*.xml"/>
+        </fileset>
+        <fileset dir="${absolute.vufind.dir}/tests/data">
+          <include name="**/*.mrc"/>
+        </fileset>
+      </apply>
+      <exec executable="${absolute.vufind.dir}/index-alphabetic-browse.sh">
+        <env key="VUFIND_HOME" value="${absolute.vufind.dir}"/>
+      </exec>
+      <!-- Stop Solr so that cores unlock and unit tests can access directly -->
+      <exec executable="${absolute.vufind.dir}/solr.sh">
+        <env key="VUFIND_HOME" value="${absolute.vufind.dir}"/>
+        <arg value="stop"/>
+      </exec>
+    </target>
 
-    <junitreport todir="${testdir}/report">
-      <fileset dir="${testoutputdir}">
-        <include name="TEST-*.xml"/>
-      </fileset>
-      <report format="frames" todir="${testdir}/report"/>
-    </junitreport>
-    <echo message="JUnit reports available in ${testdir}/report"></echo>
+    <target name="test" depends="build, setup-test-cores">
+      <mkdir dir="${testdir}"/>
+      <mkdir dir="${testoutputdir}"/>
+      <mkdir dir="${testdir}/report"/>
+      <javac fork="true" debug="on" srcdir="tests/" destdir="${testdir}"
+           classpath="tests/lib/*:${toString:classpath}:${builddir}/browse-handler">
+        <compilerarg line="-encoding UTF-8" />
+      </javac>
 
-  </target>
-</project>
+      <junit showoutput="yes" fork="true">
+        <sysproperty key="absolute.vufind.dir" value="${absolute.vufind.dir}" />
+        <sysproperty key="solr.solr.home" value="${solr.solr.home}" />
+        <jvmarg value="-Dfile.encoding=UTF-8" />
+        <classpath>
+          <pathelement location="tests/lib/junit-4.11.jar"/>
+          <pathelement location="tests/lib/*"/>
+          <pathelement location="${testdir}"/>
+          <pathelement location="${builddir}/browse-handler"/>
+          <pathelement path="${toString:classpath}"/>
+        </classpath>
+        <!-- formatter type="plain" usefile="false"/-->
+        <batchtest todir="${testoutputdir}">
+          <fileset dir="tests">
+            <include name="**/*.java"/>
+          </fileset>
+          <formatter type="xml" usefile="yes"/>
+          <formatter type="plain" usefile="yes"/>
+          <formatter type="brief" usefile="no"/>
+        </batchtest>
+      </junit>
+
+      <junitreport todir="${testdir}/report">
+        <fileset dir="${testoutputdir}">
+          <include name="TEST-*.xml"/>
+        </fileset>
+        <report format="frames" todir="${testdir}/report"/>
+      </junitreport>
+      <echo message="JUnit reports available in ${testdir}/report">
+      </echo>
+
+    </target>
+  </project>
