Improve performance by adjusting id retrieval behavior (#23)
- Simplify/unify logic around ids and extra fields (legacy ids field has been removed).
- Get hit count directly from Lucene, not by counting all of the matching IDs.
- Implement maxBibListSize limit.

--- a/build.xml
+++ b/build.xml
@@ -36,6 +36,9 @@
       <include name="**/*.jar"/>
     </fileset>
   </path>
+  <!-- Can be useful for debugging -->
+  <!-- Must comment out before pushing, as CI environment will not have run setup before all paths are referenced -->
+  <!-- <pathconvert property="classpathProp" refid="classpath"/> -->
 
   <target name="setup">
     <mkdir dir="${builddir}"/>
@@ -174,7 +177,11 @@
       </exec>
     </target>
 
-    <target name="test" depends="build, setup-test-cores">
+  <!-- ================================= 
+          target: test-main              
+         ================================= -->
+    <target name="test-main"
+      description="Run tests, assumes build is current and test cores are set up">
       <mkdir dir="${testdir}"/>
       <mkdir dir="${testoutputdir}"/>
       <mkdir dir="${testdir}/report"/>
@@ -215,4 +222,21 @@
       </echo>
 
     </target>
+
+  <!-- ================================= 
+          target: test              
+         ================================= -->
+    <target name="test" depends="build, setup-test-cores"
+      description="Run tests after build and setting up the test cores">
+        <antcall target="test-main"/>
+    </target>
+
+  <!-- ================================= 
+          target: test-skip-setup              
+         ================================= -->
+    <target name="test-skip-setup" depends="build"
+      description="Run tests after build, assumes test cores are already set up">
+        <antcall target="test-main"/>
+    </target>
+
   </project>
