--- a/build.xml
+++ b/build.xml
@@ -35,6 +35,10 @@
     <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vendor/server/lib">
       <include name="**/*.jar"/>
     </fileset>
+    <!-- Pick up SQLite JDBC driver from VuFind dist-->
+    <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vufind/jars">
+      <include name="sqlite*.jar"/>
+    </fileset>
   </path>
   <!-- Can be useful for debugging -->
   <!-- Must comment out before pushing, as CI environment will not have run setup before all paths are referenced -->
