Fix broken Travis build caused by VuFind dependency updates. (#34)
- Updates PHP, Java and OS versions to be more up-to-date.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: false
-dist: trusty
+dist: xenial
 language: java
 jdk:
-  - openjdk8
+  - openjdk11
 
 # addons section is a workaround for a Travis issue with missing JUnit jars:
 addons:
