--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,9 @@
     <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vendor/server/solr-webapp/webapp/WEB-INF/lib">
       <include name="**/*.jar"/>
     </fileset>
+    <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/import/lib">
+      <include name="**/*.jar"/>
+    </fileset>
     <!-- Needed for building tests that invoke Solr -->
     <fileset erroronmissingdir="false" dir="${absolute.vufind.dir}/solr/vendor/server/lib">
       <include name="**/*.jar"/>
